--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
               <a class="nav-link active" aria-current="page" href="src/html/institucional.html">Institucional</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="src/html/pontos-turisticos.html">Pontos
-                Turísticos</a>
+              <a class="nav-link active" aria-current="page" href="src/html/pontos-turisticos.html">Pontos Turísticos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="src/html/fale-conosco.html">Fale Conosco</a>
