--- a/src/html/fale-conosco.html
+++ b/src/html/fale-conosco.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projeto Turismo</title>
-  <link href="src/css/bootstrap-5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/bootstrap-5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,16 +17,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="src/html/institucional.html">Institucional</a>
+              <a class="nav-link active" aria-current="page" href="institucional.html">Institucional</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="src/html/pontos-turisticos.html">Pontos Turísticos</a>
+              <a class="nav-link active" aria-current="page" href="pontos-turisticos.html">Pontos Turísticos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="src/html/fale-conosco.html">Fale Conosco</a>
+              <a class="nav-link active" aria-current="page" href="fale-conosco.html">Fale Conosco</a>
             </li>
           </ul>
         </div>
@@ -34,9 +34,9 @@
     </nav>
     <!-- fim menu -->
 
-    <h3>Tela Principal</h3>
+    <h3>Tela Fale Conosco</h3>
   </div>
-  <script src="src/css/bootstrap-5.3.5/dist/js/bootstrap.min.js"></script>
+  <script src="../css/bootstrap-5.3.5/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
