--- a/src/html/institucional.html
+++ b/src/html/institucional.html
@@ -6,36 +6,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projeto Turismo</title>
   <link href="../css/bootstrap-5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/estilos.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="container py-4 px-3 mx-auto">
-    <!-- menu -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+  <div class="main-content">
+    <div class="container py-4 px-3 mx-auto">
+      <!-- menu -->
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="institucional.html">Institucional</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="pontos-turisticos.html">Pontos Turísticos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="fale-conosco.html">Fale Conosco</a>
-            </li>
-          </ul>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="institucional.html">Institucional</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="pontos-turisticos.html">Pontos Turísticos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="fale-conosco.html">Fale Conosco</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <!-- fim menu -->
+      </nav>
+      <!-- fim menu -->
 
-    <h3>Tela Institucional</h3>
+      <h3>Tela Institucional</h3>
+    </div>
+
   </div>
+
+  <footer class="py-3 my-4">
+    <hr>
+    <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
+  </footer>
   <script src="../css/bootstrap-5.3.5/dist/js/bootstrap.min.js"></script>
 </body>
 
