--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <footer class="py-3 my-4">
     <hr>
-    <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
+    <p class="text-center text-body-secondary">@ 2025</p>
   </footer>
 
   <script src="src/css/bootstrap-5.3.5/dist/js/bootstrap.min.js"></script>
