--- a/src/html/pontos-turisticos.html
+++ b/src/html/pontos-turisticos.html
@@ -43,7 +43,7 @@
 
   <footer class="py-3 my-4">
     <hr>
-    <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
+    <p class="text-center text-body-secondary">@ 2025</p>
   </footer>
   <script src="../css/bootstrap-5.3.5/dist/js/bootstrap.min.js"></script>
 </body>
