Foi adicionado imagens e corrigido algumas irregularidade

--- a/src/html/pontos-turisticos.html
+++ b/src/html/pontos-turisticos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projeto Turismo</title>
+  <title>Ponto Turistico - Projeto Turismo</title>
   <link href="../css/bootstrap-5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../css/estilos.css" rel="stylesheet">
 </head>
