--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projeto Turismo</title>
+  <title>Home - Projeto Turismo</title>
   <link href="src/css/bootstrap-5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="src/css/estilos.css" rel="stylesheet">
 </head>
@@ -25,7 +25,8 @@
                 <a class="nav-link active" aria-current="page" href="src/html/institucional.html">Institucional</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="src/html/pontos-turisticos.html">Pontos Turísticos</a>
+                <a class="nav-link active" aria-current="page" href="src/html/pontos-turisticos.html">Pontos
+                  Turísticos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="src/html/fale-conosco.html">Fale Conosco</a>
@@ -37,6 +38,37 @@
       <!-- fim menu -->
 
       <h3>Tela Principal</h3>
+      <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="src/img/img1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="src/img/img2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="src/img/img3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
   </div>
 
