--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       <!-- fim menu -->
 
       <h3>Tela Principal</h3>
+
+      <!-- Inicio carousel -->
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -69,6 +71,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <!-- Fim Carousel -->
     </div>
   </div>
 
